objects/Account.object
<CustomObject>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Clearbit_Record__c</fullName>
        <formula>if(isblank(Website),&quot;No Website&quot;,&quot; Has Website&quot;) &amp; 
  If(Isblank( cbit__Clearbit__c ),&quot;No Clearbit&quot;, &quot; Has Clearbit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Clearbit Record_Delete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Won_Opp_Date__c</fullName>
        <label>Latest Won Opp Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manual_Re_Route_Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Re-Route Fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_SS_Opportuinty__c</fullName>
        <inlineHelpText>This account has an open self-service opportuinty</inlineHelpText>
        <label>Open SS Opportuinty</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Self Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Free Trial</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZI_Certified_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ZoomInfo Certified Active Company</inlineHelpText>
        <label>ZI-Certified Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZI_Tech_Competitors__c</fullName>
        <label>ZI-Tech-Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_OK_to_Reassign__c</fullName>
        <formula>IF(Contains(Text(Owner.Team__c),&quot;Sales&quot;),
If( Target_Account__c ,&quot;Target Account&quot;,
IF (of_Live_Opps__c &gt;0,&quot;Open Opps&quot;,
IF (Today()- LastActivityDate &gt;44,&quot;Activity L45&quot;,&quot;OK&quot;))),&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin-Repurpose</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manually_Enriched_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manually Enriched By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ManualAccountEnrichUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Manager_Name__c</fullName>
        <description>Looks up the name of the Renewal Manager for the Vitally integration</description>
        <formula>Renewal_Manager__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks up the name of the Renewal Manager for the Vitally integration</inlineHelpText>
        <label>Renewal Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMB_Outbound_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account holds for SMB Outbound AE&apos;s.</inlineHelpText>
        <label>SMB Outbound Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Holdback_Notes__c</fullName>
        <description>Field to capture notes about holdbacks and territory governance exceptions, etc.</description>
        <label>Sales Ops Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_2021__c</fullName>
        <label>Sales Territory DELETE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_territory_Type__c</fullName>
        <formula>IF(IsPickVal(Sales_territory__c,&quot;&quot;),&quot;No Sales T&quot;,
IF(Contains(Text( Sales_territory__c ), &quot;Missing&quot;), &quot;Missing Info&quot;,
IF(Contains(Text( Sales_territory__c ), &quot;Exclude&quot;), &quot;Exclude&quot;,


IF(Contains(Text( Sales_territory__c ), &quot;Assig&quot;), &quot;Assigned&quot;,&quot;Open&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula looking at sales territory, assigned territory = Assigned, everything else, including missing = open</inlineHelpText>
        <label>Sales territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Manager_Name__c</fullName>
        <formula>Success_Manager__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Governance__c</fullName>
        <description>Determines how the territory is assigned. 
Blank = Routes as per standard territory routing logic. 
Parent Territory = Routes based on the territory info of the parent account. 
Approved Exception, Multi-National Exception, and Account List = Territory stamp updates but owner does not get updated.</description>
        <inlineHelpText>Determines how the territory is assigned. 
Blank = Routes as per standard territory routing logic. 
Parent Territory = Routes based on the territory info of the parent account. 
Approved Exception, AM Ecxception, Multi-National Exception, and Account List = Territory stamp updates but owner does not get updated.</inlineHelpText>
        <label>Territory Governance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent Territory</fullName>
                </value>
                <value>
                    <fullName>Approved Exception</fullName>
                </value>
                <value>
                    <fullName>Multi-National Exception</fullName>
                </value>
                <value>
                    <fullName>Account List</fullName>
                </value>
                <value>
                    <fullName>AM Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vitally_Health_Score__c</fullName>
        <inlineHelpText>Max Health Score</inlineHelpText>
        <label>Vitally Health Score</label>
        <summarizedField>Project__c.Vitally_Health_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Project__c.Vitally_Health_Score__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X6sense_Segment_Name__c</fullName>
        <label>6sense Segment Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZI_Parent_Company_ID__c</fullName>
        <inlineHelpText>Parent Company ID in ZoomInfo</inlineHelpText>
        <label>ZI-Parent Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Products_Services__c</fullName>
        <inlineHelpText>ZoomInfo Products &amp; Services</inlineHelpText>
        <label>ZI-Products &amp; Services</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Engagement_Manager__c</fullName>
        <formula>Engagement_Manager__r.Full_Name__c</formula>
        <label>CS Engagement Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn_Form_Filled_Out__c</fullName>
        <description>Checked if the customer has the churn form filled out in SFDC</description>
        <formula>NOT(ISBLANK(Goal_with_Productboard__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if the customer has the churn form filled out in SFDC</inlineHelpText>
        <label>Churn Form Filled Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_business_type__c</fullName>
        <description>Sorting accounts into size ranges based on the number of their employees.</description>
        <formula>IF( 
NumberOfEmployees  &lt; 50, &quot;Small Business (0 - 49)&quot;,
IF( 
NumberOfEmployees  &gt;= 50 &amp;&amp; NumberOfEmployees  &lt; 1000, &quot;Small and Midsize Business (50 - 999)&quot;,
IF(
NumberOfEmployees  &gt;= 1000  &amp;&amp; NumberOfEmployees  &lt; 10000,&quot;Middle Market Company (1000 - 9999)&quot;,
IF(
NumberOfEmployees  &gt;= 10000, &quot;Enterprise (&gt;10000)&quot;, null
))))</formula>
        <label>Company size range_Delete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_TAM_Positive__c</fullName>
        <formula>IF(  of_paid_users__c  &gt; 0,
IF(ISblank(  Product_Managers_at_Company__c  ),null,
 IF(	Customer_TAM__c &lt;= 0, 0,  Customer_TAM__c)),
null)</formula>
        <inlineHelpText>Compares the number of product managers at the company to sold # of makers.  Shows zero value for negative TAM</inlineHelpText>
        <label>Customer TAM (Positive)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Type_Changed__c</fullName>
        <label>Customer Type Changed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatically</fullName>
                    <default>true</default>
                    <label>Automatically</label>
                </value>
                <value>
                    <fullName>Manually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type_Compact__c</fullName>
        <description>Field for ad-hoc testing of formula fields. Admin only.</description>
        <formula>IF( Bad_Account__c ||  
( Website  = &quot;&quot; &amp;&amp; NumberOfEmployees &lt;0) , &quot;Unknown&quot;,

IF( Max_Employees__c &lt; 51,&quot;ESB&quot;, 

IF( 
CASE( BillingCountry, 
&quot;Guadeloupe&quot;,1,
&quot;Antigua and Barbuda&quot;,1,
&quot;Aruba&quot;,1,
&quot;Bahamas&quot;,1,
&quot;Barbados&quot;,1,
&quot;British Virgin Islands&quot;,1,
&quot;Cayman Islands&quot;,1,
&quot;Cuba&quot;,1,
&quot;Dominica&quot;,1,
&quot;Dominican Republic&quot;,1,
&quot;Grenada&quot;,1,
&quot;Haiti&quot;,1,
&quot;Jamaica&quot;,1,
&quot;Montserrat&quot;,1,
&quot;Saint Kitts and Nevis&quot;,1,
&quot;Saint Lucia&quot;,1,
&quot;Saint Vincent and the Grenadines&quot;,1,
&quot;Trinidad and Tobago&quot;,1,
&quot;Turks and Caicos&quot;,1,
&quot;Puerto Rico&quot;,1,
&quot;Belize&quot;,1,
&quot;Costa Rica&quot;,1,
&quot;El Salvador&quot;,1,
&quot;Guatemala&quot;,1,
&quot;Honduras&quot;,1,
&quot;Nicaragua&quot;,1,
&quot;Panama&quot;,1,
&quot;Bermuda&quot;,1,
&quot;Mexico&quot;,1,
&quot;Argentina&quot;,1,
&quot;Bolivia&quot;,1,
&quot;Chile&quot;,1,
&quot;Colombia&quot;,1,
&quot;Ecuador&quot;,1,
&quot;Paraguay&quot;,1,
&quot;Peru&quot;,1,
&quot;Suriname&quot;,1,
&quot;Uruguay&quot;,1,
&quot;Venezuela&quot;,1,
&quot;French Guiana&quot;,1,
&quot;Curacao&quot;,1,
&quot;Bangladesh&quot;,1,
&quot;Bhutan&quot;,1,
&quot;India&quot;,1,
&quot;Kazakhstan&quot;,1,
&quot;Kyrgyzstan&quot;,1,
&quot;Maldives&quot;,1,
&quot;Nepal&quot;,1,
&quot;Pakistan&quot;,1,
&quot;Sri Lanka&quot;,1,
&quot;Turkmenistan&quot;,1,
&quot;Uzbekistan&quot;,1,
&quot;China&quot;,1,
&quot;Hong Kong&quot;,1,
&quot;Japan&quot;,1,
&quot;Mongolia&quot;,1,
&quot;South Korea&quot;,1,
&quot;Taiwan&quot;,1,
&quot;Cambodia&quot;,1,
&quot;Indonesia&quot;,1,
&quot;Laos&quot;,1,
&quot;Malaysia&quot;,1,
&quot;Myanmar&quot;,1,
&quot;Philippines&quot;,1,
&quot;Singapore&quot;,1,
&quot;Thailand&quot;,1,
&quot;Vietnam&quot;,1,
&quot;Papua New Guinea&quot;,1,
&quot;Tonga&quot;,1,
&quot;Cocos (Keeling) Islands&quot;,1,
&quot;Australia&quot;,1,
&quot;New Zealand&quot;,1,
&quot;Canada&quot;,1,
&quot;US Virgin Islands&quot;,1,
&quot;United States&quot;,1,
&quot;American Samoa&quot;,1,0) = 1,
IF(Max_Employees__c &lt; 1001, &quot;SMB&quot;, &quot;EN&quot;),
 
IF(Max_Employees__c &lt; 501,&quot;SMB&quot;,  

IF(Max_Employees__c &lt; 5001,&quot;MM&quot;,&quot;EN&quot;)))))</formula>
        <inlineHelpText>Segmentation by # of Employees in a Company, Source: Clearbit
NOAM + RoW
ESB: 1-50
SMB: 51-1000
EN: &gt; 1,000

EMEA
ESB: 1-50
SMB: 51-500
MM: 501-5,000
EN: &gt; 5,000

Unknown: Bad account/Missing URL</inlineHelpText>
        <label>Admin Test Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Assign_to_Outbound__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Trigger for LeanData to Assign to Outbound SDR</inlineHelpText>
        <label>LD Assign to outbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Onboarding Specialist for Tier 4 Accounts</description>
        <inlineHelpText>Onboarding Specialist for Tier 4 Accounts</inlineHelpText>
        <label>Onboarding Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsXUHz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Manager_Email__c</fullName>
        <formula>Renewal_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Manager_Email__c</fullName>
        <formula>Success_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_score__c</fullName>
        <label>MK Customer Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Assigned_to_AE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Assigned to AE_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Created_Date_F__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Created Date [F]</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_First_SAL_Date__c</fullName>
        <description>Field to capture the earliest SAL date of the contacts associated to the account. Populated with Rollup Helper.</description>
        <label>Account First SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alert_Account_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert - Account Assigned_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Status_Number__c</fullName>
        <formula>if( Customer_Status__c = &quot;1.0 Customer&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this account a customer? (1=Yes, 0=No)</inlineHelpText>
        <label>Customer?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Size_Override__c</fullName>
        <inlineHelpText>Override company employee # provided by enrichment</inlineHelpText>
        <label>Employee Size Override</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fullcast_Node_H2_ReOrg__c</fullName>
        <label>Fullcast ReOrg Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN-NA-01</fullName>
                </value>
                <value>
                    <fullName>EN-NA-02</fullName>
                </value>
                <value>
                    <fullName>EN-NA-03</fullName>
                </value>
                <value>
                    <fullName>EN-NA-04</fullName>
                </value>
                <value>
                    <fullName>EN-NA-05</fullName>
                </value>
                <value>
                    <fullName>EN-NA-06</fullName>
                </value>
                <value>
                    <fullName>EN-NA-07</fullName>
                </value>
                <value>
                    <fullName>EN-NA-08</fullName>
                </value>
                <value>
                    <fullName>EN-NA-09</fullName>
                </value>
                <value>
                    <fullName>EN-NA-10</fullName>
                </value>
                <value>
                    <fullName>EN-NA-11</fullName>
                </value>
                <value>
                    <fullName>EN-NA-12</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-01</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-02</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-03</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-04</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-05</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-06</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-07</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-08</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-09</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-10</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-11</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-12</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-13</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-14</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-15</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-16</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-17</fullName>
                </value>
                <value>
                    <fullName>SMB-NA-18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_with_Productboard__c</fullName>
        <description>What best describes what you were trying to accomplish with Productboard?</description>
        <inlineHelpText>What best describes what you were trying to accomplish with Productboard?</inlineHelpText>
        <label>Goal with Productboard?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consolidate feedback and understand my users</fullName>
                </value>
                <value>
                    <fullName>Create a clear strategy for prioritizing what to build next</fullName>
                </value>
                <value>
                    <fullName>Align with others around a clear roadmap</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadGenius_Enrich_Date__c</fullName>
        <label>LeadGenius Enrich Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Opp_Stage_Achieved__c</fullName>
        <inlineHelpText>Max Stage achieved across all NB opps</inlineHelpText>
        <label>Max Opp Stage Achieved</label>
        <summarizedField>Opportunity.Max_Stage_Achieved__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Owner__c</fullName>
        <inlineHelpText>Owner of an open opportunity</inlineHelpText>
        <label>Open Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Website__c</fullName>
        <label>Parent Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Status__c</fullName>
        <formula>IF(IsPickVal(Sales_territory__c,&quot;&quot;),&quot;No Sales T&quot;,
IF(Contains(Text( Sales_territory__c ), &quot;Missing&quot;), &quot;Missing Info&quot;,



IF(Contains(Text( Sales_territory__c ), &quot;CM&quot;) || Contains(Text( ReOrg_Territory__c ), &quot;Assig&quot;), &quot;Assigned&quot;,&quot;Open&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Territory Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Stack_Engineering__c</fullName>
        <description>ICP data R&amp;D Tech Stack</description>
        <inlineHelpText>ICP data R&amp;D Tech Stack</inlineHelpText>
        <label>Tech Stack (Engineering)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tech_Stack_Engineering</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZI_Parent_Company_Name__c</fullName>
        <inlineHelpText>ZoomInfo Parent Company Name</inlineHelpText>
        <label>ZI-Parent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit_CompanyGeoCountry__c</fullName>
        <label>cbit__CompanyGeoCountry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Latest_MQL_Date__c</fullName>
        <description>Field to capture the latest MQL of the contacts associated to the account. Populated with Rollup Helper.</description>
        <label>Account Latest MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Latest_SAL_Date__c</fullName>
        <description>Placeholder</description>
        <label>Account Latest SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Latest_SQL_Date__c</fullName>
        <description>Field to capture the latest SQL of the opps associated to the account. Populated with Rollup Helper.</description>
        <label>Account Latest SQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Territory__c</fullName>
        <formula>Text(Owner.Territory__c)</formula>
        <inlineHelpText>Sales Territory Assigned to the owner</inlineHelpText>
        <label>Account Owner Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Billing_Info__c</fullName>
        <label>Additional Billing Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Classification__c</fullName>
        <formula>IF(Contains(Upper( CB_Business_Classifications__c ),&quot;B2B&quot;),&quot;[B2B]&quot;,&quot;&quot;) &amp; 
IF(Contains(Upper( CB_Business_Classifications__c ),&quot;B2C&quot;),&quot;[B2C]&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Segment #_Delete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Microsoft_Teams__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB-Tech-Microsoft Teams</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name_User_Input__c</fullName>
        <description>Original company name set by User when project was created.</description>
        <label>Company Name (User Input)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Owner_Team__c</fullName>
        <description>Returns TRUE if the logged in User is the Account Owner, the Account Owner&apos;s SDR or Manager. Used is Report, Dashboard and List View filters.</description>
        <formula>OR( 
$User.Id =  OwnerId ,
$User.Id =  Owner.SDR__c ,
$User.Id =  Owner.ManagerId )</formula>
        <label>Current User = Owner Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Changed_Date__c</fullName>
        <inlineHelpText>Last Time Owner was Changed</inlineHelpText>
        <label>Owner Last Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Projects_with_Contracts__c</fullName>
        <label># Projects - Active Contract</label>
        <summaryFilterItems>
            <field>Project__c.Current_Backend_Stage__c</field>
            <operation>equals</operation>
            <value>Active Contract</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Name__c</fullName>
        <formula>Solution_Architect__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Look up and return Solution Architect name for the Vitally integration</inlineHelpText>
        <label>Solution Architect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Assigned_Date__c</fullName>
        <inlineHelpText>Date territory last assigned</inlineHelpText>
        <label>Territory Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>account6QAEndDate6sense__c</fullName>
        <description>The date the account was disqualified from 6QA status (YYYY-MM-DD).</description>
        <label>6sense Account 6QA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountProfileFit6sense__c</fullName>
        <description>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Account Profile Fit </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountReachScore6sense__c</fullName>
        <description>A measure of current outreach activities against optimal quality, quantity, and diversity of outreach activities as defined by your company’s historical success on won opportunities. Outbound calls, both marketing and sales emails are analyzed for this measure.</description>
        <label>6sense Account Reach Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountUpdateDate6sense__c</fullName>
        <description>The latest update date and time when 6sense Scores were updated.</description>
        <label>6sense Account Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_segment__c</fullName>
        <label>MK Customer Fit Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_signals__c</fullName>
        <label>MK Customer Fit Signals</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Support Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_since_last_activity__c</fullName>
        <formula>IF(isblank(LastActivityDate),99999,today() -  LastActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Manager_Email__c</fullName>
        <formula>Engagement_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Opportunity_Holdback__c</fullName>
        <label>Has Opportunity Holdback</label>
        <summaryFilterItems>
            <field>Opportunity.Sales_Holdback__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Holdback_Expiration_Date__c</fullName>
        <inlineHelpText>Date Holdback will transition to the territory owner</inlineHelpText>
        <label>Holdback Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Email__c</fullName>
        <description>Returns SA&apos;s email for the purposes of the Vitally integration</description>
        <formula>Solution_Architect__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns SA&apos;s email for the purposes of the Vitally integration</inlineHelpText>
        <label>Solution Architect Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountBuyingStage6sense__c</fullName>
        <description>The categorical representation of the measure of how much an account is behaving like accounts with which there is a history of previously opened opportunities.

Target - The buyer may not realize a problem exists, but may fit within the seller’s TAM. 

Awareness - The buyer realizes they have a problem. The buyer is doing educational research to more clearly understand, frame, and identify their problem. 

Consideration - The buyer defines their problem and researches options to solve it. The buyer is researching all of the available options to solve the defined problem. 

Decision - The buyer chooses a solution. The buyer is narrowing a list of potential vendors to ultimately make a purchase decision. 

Purchase - The buyer commits to a specific solution and justifies the reasons for the purchase.</description>
        <label>6sense Account Buying Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountIntentScore6sense__c</fullName>
        <description>A measure, between 0 and 100, of how much an account is behaving like accounts with which there is a history of previously opened opportunities.</description>
        <label>6sense Account Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Correct_CSM_Team_Assigned__c</fullName>
        <formula>IF( Correct_CSM_Team__c = &quot;&quot; ,
  IF ( CSM_Team__c &lt;&gt; &quot;&quot;,&quot;Remove CSM&quot;,&quot;Correct-No CSM&quot;),
  IF ( Correct_CSM_Team__c = CSM_Team__c,&quot;Correct&quot;,
     IF(Correct_CSM_Team__c= &quot;Self Service-No CSM&quot; &amp;&amp;  CSM_Team__c = &quot;&quot;,&quot;Correct-NO CSM&quot;,&quot;Incorrect&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correct CSM Team Assigned?</label>
        <type>Text</type>
    </fields>
</CustomObject>